Fix subheading color contrast

--- a/assets/styles/2-base/_typography.scss
+++ b/assets/styles/2-base/_typography.scss
@@ -168,7 +168,7 @@ strong {
 
 .SubHeading {
   font-family: $primary-font-stack;
-  color: $med-gray;
+  color: #6B6B6B;
   border-bottom: 1px solid $med-gray;
   display: inline-block;
   text-transform: uppercase;
@@ -186,7 +186,7 @@ strong {
 }
 
   .SubHeadingDark {
-    color: $dark-base-lightened;
+    color: #6B6B6B;
     border-color: $dark-base-lightened;
   }
 
